--- a/_posts/2021-05-03-Test.md
+++ b/_posts/2021-05-03-Test.md
@@ -1,7 +1,7 @@
 ---
 title: TITLE
 date: 2021-05-03 00:00:00 +/-0000
-categories: [Category1, Category1a]
-tags: [tag1, tag2]     # TAG names should always be lowercase
+categories: []
+tags: []     # TAG names should always be lowercase
 comments: true
 ---
