adding footnotes for testing

--- a/_posts/2021-05-03-Test.md
+++ b/_posts/2021-05-03-Test.md
@@ -26,8 +26,12 @@ Donec tristique lobortis lectus at suscipit. Etiam a sem urna. In vulputate eges
 
 ## Sub-section 2
 
-Donec tristique lobortis lectus at suscipit. Etiam a sem urna. In vulputate egestas turpis eget iaculis. Sed condimentum, libero et placerat luctus, neque orci scelerisque quam, quis sodales neque nibh egestas nisi. Donec quis ligula sed ipsum eleifend facilisis. Maecenas orci quam, pretium non malesuada at, tempus quis nunc. Proin malesuada tellus metus, a facilisis massa consectetur mollis. Donec eu faucibus massa. Vivamus ut ipsum molestie lectus rhoncus rhoncus ut id nisi. Pellentesque sollicitudin gravida elit vitae efficitur. Vestibulum fringilla congue orci in pharetra. Curabitur a bibendum sapien. Quisque molestie sed purus nec tempus. Integer sed leo eget nibh egestas feugiat. Maecenas id elit vitae eros interdum euismod.
+Donec tristique lobortis lectus at suscipit. Etiam a sem urna. In vulputate egestas turpis eget iaculis. Sed condimentum, libero et placerat luctus, neque orci scelerisque quam, quis sodales neque nibh egestas nisi. Donec quis ligula sed ipsum eleifend facilisis. Maecenas orci quam, pretium non malesuada at, tempus quis nunc. Proin malesuada tellus metus, a facilisis massa consectetur mollis. Donec eu faucibus massa. Vivamus ut ipsum molestie lectus rhoncus rhoncus ut id nisi. Pellentesque sollicitudin gravida elit vitae efficitur. Vestibulum fringilla congue orci in pharetra. Curabitur a bibendum sapien. Quisque molestie sed purus nec tempus. Integer sed leo eget nibh egestas feugiat. Maecenas id elit vitae eros interdum euismod. Link[^fn1]
 
 ## Sub-section 3
 
-Donec tristique lobortis lectus at suscipit. Etiam a sem urna. In vulputate egestas turpis eget iaculis. Sed condimentum, libero et placerat luctus, neque orci scelerisque quam, quis sodales neque nibh egestas nisi. Donec quis ligula sed ipsum eleifend facilisis. Maecenas orci quam, pretium non malesuada at, tempus quis nunc. Proin malesuada tellus metus, a facilisis massa consectetur mollis. Donec eu faucibus massa. Vivamus ut ipsum molestie lectus rhoncus rhoncus ut id nisi. Pellentesque sollicitudin gravida elit vitae efficitur. Vestibulum fringilla congue orci in pharetra. Curabitur a bibendum sapien. Quisque molestie sed purus nec tempus. Integer sed leo eget nibh egestas feugiat. Maecenas id elit vitae eros interdum euismod.
+Donec tristique lobortis lectus at suscipit. Etiam a sem urna. In vulputate egestas turpis eget iaculis. Sed condimentum, libero et placerat luctus, neque orci scelerisque quam, quis sodales[^fn2] neque nibh egestas nisi. Donec quis ligula sed ipsum eleifend facilisis. Maecenas orci quam, pretium non malesuada at, tempus quis nunc. Proin malesuada tellus metus, a facilisis massa consectetur mollis. Donec eu faucibus massa. Vivamus ut ipsum molestie lectus rhoncus rhoncus ut id nisi. Pellentesque sollicitudin gravida elit vitae efficitur. Vestibulum fringilla congue orci in pharetra. Curabitur a bibendum sapien. Quisque molestie sed purus nec tempus. Integer sed leo eget nibh egestas feugiat. Maecenas id elit vitae eros interdum euismod.
+
+## Footnotes
+[^fn1]: Source 1
+[^fn2]: Source 2
